--- a/analyses/org.eclipse.tracecompass.incubator.kernel.ui/src/org/eclipse/tracecompass/incubator/internal/kernel/ui/views/swslatency/messages.properties
+++ b/analyses/org.eclipse.tracecompass.incubator.kernel.ui/src/org/eclipse/tracecompass/incubator/internal/kernel/ui/views/swslatency/messages.properties
@@ -1,18 +1,13 @@
 ###############################################################################
-# Copyright (c) 2018 Ericsson
+# Copyright (c) 2021 Ecole Polytechnique de Montreal
 #
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
-# https://www.eclipse.org/legal/epl-2.0
+# https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 ###############################################################################
-
-Bundle-Vendor = Eclipse Trace Compass Incubator
-Bundle-Name = Trace Compass kernel Core Plug-in (Incubator)
-
-kernel.io.name = IO
-analysis.callstack.context = Context CallStacks
-analysis.criticalpath.aggregated = Critical Path Aggregated
-analysis.swsLatency.wakeupswitch = Sched Wakeup Switch Latency
+SWSLatencyScatterView_title=Duration vs Time
+SWSLatencyScatterView_xAxis=Time
+SWSLatencyScatterView_yAxis=Duration
